tests/semantic/01-define-class.ref
"tests/semantic/01-define-class.cl", line 3:7, Semantic error: Class Int is redefined
"tests/semantic/01-define-class.cl", line 7:7, Semantic error: Class has illegal name SELF_TYPE
"tests/semantic/01-define-class.cl", line 11:7, Semantic error: Class D is redefined
"tests/semantic/01-define-class.cl", line 1:21, Semantic error: Class BB__ has undefined parent A
"tests/semantic/01-define-class.cl", line 5:18, Semantic error: Class C has illegal parent Int
"tests/semantic/01-define-class.cl", line 9:18, Semantic error: Class D has illegal parent SELF_TYPE
"tests/semantic/01-define-class.cl", line 13:7, Semantic error: Inheritance cycle for class E
"tests/semantic/01-define-class.cl", line 14:7, Semantic error: Inheritance cycle for class F
"tests/semantic/01-define-class.cl", line 15:7, Semantic error: Inheritance cycle for class G
Compilation halted
