tests/semantic/01-define-class.cl
class BB__ inherits A {};

class Int {};

class C inherits Int {};

class SELF_TYPE {};

class D inherits SELF_TYPE {};

class D {};

class E inherits F {};
class F inherits G {};
class G inherits E {};